适配Java 8,修复小问题